--- a/src/display/stylesheets/style.scss
+++ b/src/display/stylesheets/style.scss
@@ -15,3 +15,31 @@ h1, h2{
     justify-content: center;
     align-items: center;
 }
+svg {
+    background: #eee;
+    overflow: visible;
+    margin-bottom: 2rem;
+    display: block;
+  }
+  
+  #root {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+  }
+  
+  button {
+    margin-bottom: 5px;
+    width: 100px;
+  }
+
+  body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
