--- a/src/display/stylesheets/style.scss
+++ b/src/display/stylesheets/style.scss
@@ -39,13 +39,13 @@ svg {
 button {
   margin-bottom: 5px;
   width: 100px;
-}
+} 
   
 .tooltip {
 opacity: 1;
 }
   .bar:hover {
-    fill: rgb(0, 0, 0) ;
+    text-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
   }
 
   
