--- a/src/display/stylesheets/style.scss
+++ b/src/display/stylesheets/style.scss
@@ -12,6 +12,9 @@ h1, h2{
 
 #UserDashboard {
   width: 750px;
+  color: white;
+  font-family: 'Audiowide', cursive;
+
 }
 
 .categoriesDrop {
@@ -22,10 +25,15 @@ h1, h2{
 svg {
   width:750px;
   height: 300px;
-  background: #eee;
   overflow: visible;
   margin-bottom: 2rem;
   display: block;
+  box-shadow: inset 1px 2000px rgba(208, 208, 208, 0.54);
+
+}
+
+text{
+  color: white;
 }
 
 #root {
@@ -41,11 +49,20 @@ button {
   width: 100px;
 } 
   
+button:hover {
+  color: rgb(114, 120, 171);
+  box-shadow: 0 5px 15px rgb(114, 120, 171);
+}
+
 .tooltip {
 opacity: 1;
 }
+
+
+
   .bar:hover {
-    text-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
+    color: rgb(114, 120, 171);
+  box-shadow: 0 5px 15px rgb(114, 120, 171);
   }
 
   
