change style of tooltip

--- a/src/display/stylesheets/style.scss
+++ b/src/display/stylesheets/style.scss
@@ -61,7 +61,12 @@ button:hover {
 }
 
 .tooltip {
-opacity: 1;
+  padding: 5;
+  font-size: 20px;
+  fill: whitesmoke;
+  stroke: darkgray;
+  font-weight: 600;
+  opacity: 1;
 }
 
 
