main config dashboard mostly functional, but still needs work porting data to proper endpoint

--- a/src/display/stylesheets/style.scss
+++ b/src/display/stylesheets/style.scss
@@ -44,6 +44,15 @@ svg {
   align-self: flex-end;
 }
 
+div#navBtn {
+  display: flex;
+  flex-direction: row-reverse;
+}
+span {
+  display: flex;
+  justify-content: space-evenly;
+}
+
 button {
   margin-bottom: 5px;
   width: 100px;
