--- a/src/display/stylesheets/style.scss
+++ b/src/display/stylesheets/style.scss
@@ -12,7 +12,6 @@ h2 {
 }
 
 #UserDashboard {
-  width: 750px;
   color: white;
   font-family: 'Audiowide', cursive;
 }
@@ -22,7 +21,9 @@ h2 {
   color: white;
   font-family: 'Audiowide', cursive;
 }
-
+.router {
+  width: 100%
+}
 .categoriesDrop {
   display: flex;
   justify-content: center;
@@ -32,8 +33,11 @@ h2 {
 .btn {
   width: 150px;
 }
+#chartArea {
+  width: 80%;
+}
 svg {
-  width: 750px;
+  width: 100%;
   height: 300px;
   overflow: visible;
   margin-bottom: 2rem;
