--- a/src/display/stylesheets/style.scss
+++ b/src/display/stylesheets/style.scss
@@ -4,6 +4,10 @@ h2 {
   justify-content: center;
   align-items: center;
 }
+div a {
+  width: 100%;
+  height: 100%;
+}
 
 .configButton {
   position: absolute;
@@ -17,13 +21,19 @@ h2 {
 }
 
 #configDashboard {
-  width: 750px;
+  width: 80%;
   color: white;
   font-family: 'Audiowide', cursive;
 }
 .router {
-  width: 100%
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
+
+
 .categoriesDrop {
   display: flex;
   justify-content: center;
@@ -62,6 +72,7 @@ text {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  flex-basis: 100%;
   height: 100vh;
 }
 
