some testing modules complete

--- a/src/display/stylesheets/style.scss
+++ b/src/display/stylesheets/style.scss
@@ -1,3 +1,6 @@
+body {
+  background-color: darkslategrey;
+}
 h1,
 h2 {
   display: flex;
@@ -61,6 +64,7 @@ text {
 
 
 #root {
+  font-family: 'Audiowide', cursive;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -92,6 +96,7 @@ span {
 }
 
 button {
+  margin-top: 10px;
   margin-bottom: 5px;
   width: 100%;
 }
@@ -114,32 +119,3 @@ button:hover {
   fill-opacity: 70%;
   box-shadow: 0 5px 15px rgb(114, 120, 171);
 }
-
-// .d3-tip {
-//     line-height: 1;
-//     font-weight: bold;
-//     padding: 12px;
-//     background: rgba(0, 0, 0, 0.8);
-//     color: #fff;
-//     border-radius: 2px;
-//   }
-
-//   /* Creates a small triangle extender for the tooltip */
-//   .d3-tip:after {
-//     box-sizing: border-box;
-//     display: inline;
-//     font-size: 10px;
-//     width: 100%;
-//     line-height: 1;
-//     color: rgba(0, 0, 0, 0.8);
-//     content: "\25BC";
-//     position: absolute;
-//     text-align: center;
-//   }
-
-//   /* Style northward tooltips differently */
-//   .d3-tip.n:after {
-//     margin: -1px 0 0 0;
-//     top: 100%;
-//     left: 0;
-//   }
