--- a/src/display/stylesheets/style.scss
+++ b/src/display/stylesheets/style.scss
@@ -1,6 +1,4 @@
-body {
-  background-color: darkslategrey;
-}
+
 h1,
 h2 {
   display: flex;
@@ -55,7 +53,7 @@ svg {
   overflow: visible;
   margin-bottom: 2rem;
   display: block;
-  box-shadow: inset 1px 2000px rgba(208, 208, 208, 0.54);
+  box-shadow: inset 1px 2000px rgba(208, 208, 208, 0.75);
 }
 
 text {
@@ -106,11 +104,17 @@ button:hover {
   box-shadow: 0 5px 15px rgb(114, 120, 171);
 }
 
+div  .tooltip {
+  background: lightsteelblue;
+}
+
+text.tooltip {
+  background: lightsteelblue;
+}
 .tooltip {
   padding: 5;
   font-size: 20px;
-  fill: whitesmoke;
-  stroke: darkgray;
+  fill: black;
   font-weight: 600;
 }
 
