minor style updates

--- a/src/display/stylesheets/style.scss
+++ b/src/display/stylesheets/style.scss
@@ -1,5 +1,5 @@
 footer {
-  display:flex;
+  display: flex;
   justify-content: center;
 }
 
@@ -30,6 +30,12 @@ div a {
   color: black;
   font-family: 'Audiowide', cursive;
 }
+
+div#configHeader {
+  background-color: lightgray;
+  border-radius: 5px;
+}
+
 .router {
   width: 100%;
   display: flex;
@@ -60,12 +66,12 @@ svg {
 }
 
 text {
-  color: black;
+  color: whitesmoke;
 }
 
 #root {
   font-family: 'Audiowide', cursive;
-  flex-basis:100%;
+  flex-basis: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -107,7 +113,7 @@ button:hover {
   box-shadow: 0 5px 15px rgb(114, 120, 171);
 }
 
-div  .tooltip {
+div .tooltip {
   background: lightsteelblue;
 }
 
