--- a/src/display/stylesheets/style.scss
+++ b/src/display/stylesheets/style.scss
@@ -20,6 +20,10 @@ div a {
   top: 15px;
 }
 
+#catInput {
+  width:100%
+}
+
 #UserDashboard {
   color: white;
   font-family: 'Audiowide', cursive;
