styled buttons on config and project select

--- a/src/display/stylesheets/style.scss
+++ b/src/display/stylesheets/style.scss
@@ -137,6 +137,14 @@ text.tooltip {
   box-shadow: 0 5px 15px rgb(114, 120, 171);
 }
 
+#endpointHeader {
+  margin-left: 10px;
+}
+
+#categoriesHeader {
+  margin-left: 10px;
+}
+
 #btnAddQuery button {
   width: 100%;
 }
