Removed console logs from server and completed modal updates

--- a/src/display/stylesheets/style.scss
+++ b/src/display/stylesheets/style.scss
@@ -248,6 +248,10 @@ link {
   margin: auto;
 }
 
+div#freqExamples {
+  color: gray;
+}
+
 @media only screen and (max-width: 700px) {
   #navProjectSelect {
     width: max-content;
