fixed button link conflicts

--- a/src/display/stylesheets/style.scss
+++ b/src/display/stylesheets/style.scss
@@ -211,16 +211,19 @@ button#navConfigDash {
 a#navConfigLink {
   color: whitesmoke;
   text-decoration-line: none;
+  width: 100%;
 }
 
 a#navUserDashLink {
   color: whitesmoke;
   text-decoration-line: none;
+  width: 100%;
 }
 
 a#navProjLink {
   color: whitesmoke;
   text-decoration-line: none;
+  width: 100%;
 }
 
 #projectSelect {
