fixed a button style quirk

--- a/src/display/stylesheets/style.scss
+++ b/src/display/stylesheets/style.scss
@@ -204,7 +204,7 @@ button#navProjectSelect {
 
 button#navConfigDash {
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: column;
   align-items: center;
 }
 
